deduplicate call to collectResultInfos